--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -41,6 +41,7 @@
                                                     <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                                                     </a>
                                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                                        <a asp-controller="Composition" asp-action="New" asp-route-UserID="@user.Id" type="submit" class="dropdown-item btn">New composition</a>
                                                         @if (user.LockoutEnabled)
                                                         {
                                                             <a type="submit" class="dropdown-item btn">Ban</a>
