--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLongTitle">@composition.Title</h5>
                                         <div class="ml-auto d-flex align-items-center">
-                                            @if(UserIsAuthor(User, composition))
+                                            @if (UserIsAuthor(User, composition) || this.User.IsInRole("Administrator"))
                                             {  
                                                 <a class="mr-3" asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()">
                                                     Edit
