--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -3,7 +3,7 @@
 <div class="row justify-content-center">
     <div class="col-lg-9 col-xl-9">
         <div class="form-group">
-            <input id="input-title" class="form-control" required>
+            <input minlength="1" maxlength="80" id="input-title" class="form-control" required>
         </div>
         <div class="form-group">
             <select id="select-genre" class="form-control" required>
