--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -2,15 +2,23 @@
     ViewData["Title"] = "Admin";
 }
 
+@using ReflectionIT.Mvc.Paging
+@using Microsoft.IdentityModel
 @model coursework_itransition.Controllers.AdministratorController
 @using Microsoft.EntityFrameworkCore
+@addTagHelper *, ReflectionIT.Mvc.Paging
+
 
 <link rel="stylesheet" href="~/css/administrator.css"/>
 
 
+<nav aria-label="Users navigation">
+    <vc:pager paging-list="@Model.partofUsers"></vc:pager>
+</nav>
+
 <div class="p-2 text-center bg-dark">
     <h3 class="mb-2">
-        Users
+            Users
     </h3>
 </div>
 <div class="table-striped table-responsive-sm">
@@ -25,7 +33,7 @@
                 </tr>
             </thead>
             <tboby>
-                @foreach (var user in Model._context.Users.Include(comp=>comp.Compositions))
+                @foreach (var user in Model.partofUsers)
                 {
                     <tr>
                         <td>
@@ -42,8 +50,8 @@
                                                     <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                                                     </a>
                                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                                        <form asp-controller="Administrator" asp-action="ActionWithUser" method="post" asp-route-UserID="@user.Id" asp-route-pointOfStart="@Model._pointOfStart">
-                                                            @if (user.LockoutEnabled)
+                                                        <form asp-controller="Administrator" asp-action="ActionWithUser" method="post" asp-route-UserID="@user.Id">
+                                                            @if (user.LockoutEnd == null || user.LockoutEnd <= DateTime.Now)
                                                             {
                                                                 <button type="submit" class="dropdown-item btn" name="stringAction" value="BanUser">Ban</button>
                                                             }
@@ -122,7 +130,7 @@
                         <td><p class="size">@user.Name</p></td>
                         <td><p class="size">@user.Email</p></td>
                         <td>
-                            @if (user.LockoutEnabled)
+                            @if (user.LockoutEnd == null || user.LockoutEnd <= DateTime.Now)
                             {
                                 <p>not ban</p>
                             }
@@ -130,7 +138,7 @@
                             {
                                 <p>ban</p>
                             }
-                        </td>
+                        </td>                 
                         @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
                         {
                         <td>Yes</td>
@@ -139,8 +147,12 @@
                         {
                         <td></td>
                         }
-                    </tr>
+                        </tr>
                 }
             </tbody>
         </table>
 </div>
+
+<nav aria-label="Users navigation">
+    <vc:pager paging-list="@Model.partofUsers" />
+</nav>
