--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -4,16 +4,19 @@
 
 @using ReflectionIT.Mvc.Paging
 @using Microsoft.IdentityModel
-@model coursework_itransition.Controllers.AdministratorController
+@using Identity.Models;
+@using Microsoft.AspNetCore.Identity;
+@model PagingList<ApplicationUser>
 @using Microsoft.EntityFrameworkCore
 @addTagHelper *, ReflectionIT.Mvc.Paging
+@inject UserManager<ApplicationUser> UserManager
 
 
 <link rel="stylesheet" href="~/css/administrator.css"/>
 
 
 <nav aria-label="Users navigation">
-    <vc:pager paging-list="@Model.partofUsers"></vc:pager>
+    <vc:pager paging-list="@Model"></vc:pager>
 </nav>
 
 <div class="p-2 text-center bg-dark">
@@ -33,7 +36,7 @@
                 </tr>
             </thead>
             <tboby>
-                @foreach (var user in Model.partofUsers)
+                @foreach (var user in Model)
                 {
                     <tr>
                         <td>
@@ -50,7 +53,7 @@
                                                     <a class="h4 mr-3 dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                                                     </a>
                                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                                        <form asp-controller="Administrator" asp-action="ActionWithUser" method="post" asp-route-UserID="@user.Id">
+                                                        <form asp-controller="Administrator" asp-action="ActionWithUser" method="post" asp-route-pageindex="@Model.PageIndex" asp-route-UserID="@user.Id">
                                                             @if (user.LockoutEnd == null || user.LockoutEnd <= DateTime.Now)
                                                             {
                                                                 <button type="submit" class="dropdown-item btn" name="stringAction" value="BanUser">Ban</button>
@@ -59,7 +62,7 @@
                                                             {
                                                                 <button type="submit" class="dropdown-item btn" name="stringAction" value="UnBanUser">Unban</button>
                                                             }
-                                                            @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
+                                                            @if(await UserManager.IsInRoleAsync(user,"Administrator"))
                                                             {
                                                                 <button type="submit" class="dropdown-item btn" name="stringAction" value="RemoveAdminStatus">Remove admin status</button>
                                                             }
@@ -139,7 +142,7 @@
                                 <p>ban</p>
                             }
                         </td>                 
-                        @if(await Model._userManager.IsInRoleAsync(user,"Administrator"))
+                        @if(await UserManager.IsInRoleAsync(user,"Administrator"))
                         {
                         <td>Yes</td>
                         }
@@ -154,5 +157,5 @@
 </div>
 
 <nav aria-label="Users navigation">
-    <vc:pager paging-list="@Model.partofUsers" />
+    <vc:pager paging-list="@Model" />
 </nav>
