Add button go-up and infinity page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -77,3 +77,9 @@
         </tboby>
     </table>    
 </div>
+
+<div id="arrowTop" hidden></div>
+
+<div id="pol"></div>
+
+<script src="~/js/Home/Index.js"></script> 
