Download signlar, add comments to db

--- a/Views/Composition/Show.cshtml
+++ b/Views/Composition/Show.cshtml
@@ -49,7 +49,28 @@
         <hr style="border-top: 3px solid rgba(128, 128, 128, 0.25);">
         <p class="chapter-contents">@chapter.Contents</p>
     }
+
+    <div>
+        <hr style="border-top: 3px solid rgba(128, 128, 128, 0.25);">
+        <h4 class="text-center">Comments</h4>
+
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Fake Dude</h5>
+                <p class="card-text">Some text of the comment here. lets just pretend its a legit comment. So i can do stuff. yeshahseha</p>
+            </div>
+        </div>
+        <div class="card mb-3">
+            <div class="card-body">
+                <h5 class="card-title">Another Man</h5>
+                <p class="card-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue;</p>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script type="module" src="~/js/Composition/markdown.js"></script>
+
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script type="module" src="~/js/Composition/comments.js"></script>
