Create comment, send to all clients

--- a/Views/Composition/Show.cshtml
+++ b/Views/Composition/Show.cshtml
@@ -4,6 +4,8 @@
 
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@600&display=swap" rel="stylesheet">
 
+<div id="comp-id-holder" hidden>@Model.ID</div>
+
 <div class="container">
     <div class="row">
         <div class="col">
@@ -50,22 +52,17 @@
         <p class="chapter-contents">@chapter.Contents</p>
     }
 
-    <div>
+    <div id="comments-section">
         <hr style="border-top: 3px solid rgba(128, 128, 128, 0.25);">
         <h4 class="text-center">Comments</h4>
 
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title">Fake Dude</h5>
-                <p class="card-text">Some text of the comment here. lets just pretend its a legit comment. So i can do stuff. yeshahseha</p>
+        <div class="input-group mb-3">
+            <textarea style="resize:none;" class="form-control" id="textarea-comment-text" placeholder="Write you comment..."></textarea>
+            <div class="input-group-append">
+                <button class="btn btn-primary" id="btn-post-comment">Comment</button>
             </div>
         </div>
-        <div class="card mb-3">
-            <div class="card-body">
-                <h5 class="card-title">Another Man</h5>
-                <p class="card-text">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue;</p>
-            </div>
-        </div>
+
     </div>
 </div>
 
