Add all feed without user-name

--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -83,12 +83,12 @@
                                         <div class="modal-body">
                                                 <div class="container">
                                                     <div class="row">
-                                                        <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">EMAIL:</div>
-                                                        <div class="col-9 col-sm-9 col-md-9 col-lg-9 col-xl-9 size">@user.Email</div>
+                                                        <div class="col-3">EMAIL:</div>
+                                                        <div class="col-9 size">@user.Email</div>
                                                     </div>
                                                     <div class="row">
-                                                        <div class="col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">USER ID:</div>
-                                                        <div class="col-9 col-sm-9 col-md-9 col-lg-9 col-xl-9 size">@user.Id</div>
+                                                        <div class="col-3">USER ID:</div>
+                                                        <div class="col-9 size">@user.Id</div>
                                                     </div>
                                                 </div>
                                             @if(user.Compositions.Count > 0)
