--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -25,9 +25,7 @@
             <button id="btn-save" class="mr-2 ml-2 btn btn-success" disabled>Save</button>
         </div>
 
-        <ul id="sortable" class="list-group list-unstyled custom-fixed">
-            
-        </ul>
+        <ul id="sortable" class="list-group list-unstyled custom-fixed"></ul>
 
         <br>
         <div class="form-group" align="center">
