--- a/Views/Administrator/Administrator.cshtml
+++ b/Views/Administrator/Administrator.cshtml
@@ -107,10 +107,10 @@
                                                                     <div class="size">@composition.Title</div>
                                                                 </td>
                                                                 <td class="th-Buttons-Inside">
-                                                                    <a asp-controller="Composition" asp-action="Show" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
+                                                                    <a asp-controller="Composition" asp-action="Show" asp-route-id="@composition.ID" type="button" class="btn btn-secondary">
                                                                         <i class="fa fa-eye"></i>
                                                                     </a>
-                                                                    <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-secondary">
+                                                                    <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" type="button" class="btn btn-secondary">
                                                                         <i class="fa fa-edit"></i>
                                                                     </a>
                                                                 </td>
