--- a/Views/Composition/New.cshtml
+++ b/Views/Composition/New.cshtml
@@ -25,7 +25,7 @@
                 <textarea class="form-control" asp-for="Summary" class="form-control" rows="10"></textarea>
             </div>
             <div class="form-group" align="center">
-                <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
+                <a href="@Context.Request.Headers["Referer"].ToString()" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
                 <button type="submit" class="btn btn-primary">Create</button>
             </div>
         </form>
