--- a/Views/Composition/Show.cshtml
+++ b/Views/Composition/Show.cshtml
@@ -1,5 +1,6 @@
 @{ ViewData["Title"] = Model.Title; }
 
+@inject Microsoft.AspNetCore.Identity.SignInManager<Identity.Models.ApplicationUser> SignInManager
 @model coursework_itransition.Models.Composition
 
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Text:wght@600&display=swap" rel="stylesheet">
@@ -60,13 +61,19 @@
         <hr style="border-top: 3px solid rgba(128, 128, 128, 0.25);">
         <h4 class="text-center">Comments</h4>
 
-        <div class="input-group mb-3">
-            <textarea style="resize:none;" class="form-control" id="textarea-comment-text" placeholder="Write you comment..."></textarea>
-            <div class="input-group-append">
-                <button class="btn btn-primary" id="btn-post-comment">Comment</button>
+        @if (SignInManager.IsSignedIn(User))
+        {
+            <div class="input-group mb-3">
+                <textarea style="resize:none;" class="form-control" id="textarea-comment-text" placeholder="Write you comment..."></textarea>
+                <div class="input-group-append">
+                    <button class="btn btn-primary" id="btn-post-comment">Comment</button>
+                </div>
             </div>
-        </div>
-
+        }
+        else
+        {
+            <p class="text-center mb-3"><a asp-area="Identity" asp-page="/Account/Login">Login</a> to leave comments</p>
+        }
     </div>
 </div>
 
